# climate_eof_group_project

./: .flake8  README.md  analysis_try.py  pyproject.toml  requirements.txt  setup.py  setup_sample.py  virtual_environment_requirements.txt
.github/workflows/: python-versions.yml
Data/: Get_Data.py
scripts/: linear_regression_OOP.py  linear_regression_function.py  mean_functions.py  min_max2.py
scripts/tests/: sample_data_for_testing.py  test_anoms.py  test_regression.py  test_years.py
simple_climate_package/: README.md  __init__.py  analysis_try.py  extremes.py  linear_regression.py  linear_regression_OOP.py  loader.py  mean.py  setup.py  version_info.py
simple_climate_package/Data/: Get_Data.py
simple_climate_package/tests/: __init__.py  config_tests.py  sample_data.py  test_extremes.py  test_mean.py
tests/: __init__.py  test_extremes.py  test_mean.py  test_regression.py
