[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_climate_package"
version = "1.0.0"
description = "Simple statistical analysis for E-OBS datasets"
readme = "README.md"
license = { text = "MIT license" }
authors = [
    { name = "Hannah-Jane Wood" },
    { name = "Lucy Harlow", email = "lucy.harlow@reuben.ox.ac.uk" },
    { name = "Ofer Cohen" }
]
requires-python = ">=3.11"

dependencies = [
  "Cartopy>=0.25.0",
  "cdsapi>=0.7.7",
  "cftime>=1.6.5",
  "contourpy>=1.3.3",
  "cycler>=0.12.1",
  "ecmwf-datastores-client>=0.4.0",
  "fonttools>=4.60.1",
  "Jinja2>=3.1.6",
  "kiwisolver>=1.4.9",
  "matplotlib>=3.10.7",
  "multiurl>=0.3.7",
  "netCDF4>=1.7.3",
  "numpy>=2.3.4",
  "packaging>=25.0",
  "pandas>=2.3.3",
  "pillow>=12.0.0",
  "pyparsing>=3.2.5",
  "pyproj>=3.7.2",
  "pyshp>=3.0.2.post1",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2025.2",
  "requests>=2.32.5",
  "roman-numerals-py>=3.1.0",
  "scipy>=1.16.2",
  "shapely>=2.1.2",
  "six>=1.17.0",
  "tqdm>=4.67.1",
  "typing_extensions>=4.15.0",
  "tzdata>=2025.2",
  "urllib3>=2.5.0",
  "xarray>=2025.10.1",
]

[project.optional-dependencies]
docs = [
    "sphinx>=1.5, !=1.7.3",
    "sphinx_rtd_theme",
]
dev = [
    "flake8>=3",
    "pytest",
    "build",
]

[project.urls]
Homepage = "https://github.com/leharlow02-glitch/climate_eof_group_project"

[tool.setuptools.packages.find]
include = ["simple_climate_package", "simple_climate_package.*"]
